cli/tests/snapshot/inputs/errors/destructuring_type_mismatch_fail.ncl
# capture = 'stderr'
# command = ['eval']
(let { a : Number } = { a = "hi" } in
a) : _
